# Gallery

./: README.md  VIDEO_PROGRESS_FIX.md  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: deploy.yml  release.yml
docs/: OCR_Translation_Overview.md
src/: App.svelte  app.css  stores.ts
src-tauri/: Cargo.toml  build_log.txt  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs
src/components/: CanvasRenderer.svelte  CanvasView.svelte  ContextMenu.svelte  FilterWidget.svelte  MacroRecorder.svelte  OCRPanel.svelte  OverlayControls.svelte  SearchWidget.svelte  SettingsModal.svelte  VideoOverlay.svelte  VideoProgressBar.svelte
src/lib/: CoordinateTransforms.ts  DatabaseService.ts  OCRService.ts  OCRUtils.ts  OllamaOCRService.ts  TranslationService.ts  fileSystem.ts
src/lib/Canvas/: MediaManager.ts  OCRHandler.ts
